tests/ui/rfcs/rfc-2632-const-trait-impl/const-closure-trait-method.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/const-closure-trait-method.rs:14:39
   |
LL | const fn need_const_closure<T: ~const FnOnce(()) -> i32>(x: T) -> i32 {
   |                                       ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

